modified farm records into fragments

--- a/app/src/main/res/layout/activity_crop_inventory_fragment.xml
+++ b/app/src/main/res/layout/activity_crop_inventory_fragment.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,6 +13,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/imageView_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|right"
+                android:clickable="true"
+                android:src="@drawable/ic_close" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -280,18 +290,39 @@
             </LinearLayout>
 
 
-            <Button
-                android:id="@+id/btn_save"
-                style="@style/Button"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:backgroundTint="@color/colorPrimary"
-                android:drawableTint="#ffffff"
-                android:text="submit"
-                android:textAllCaps="true"
-                android:background="@drawable/rounded_corners_button"
-                android:textColor="#ffffff" />
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="@dimen/dimen_20dp"
+                android:background="@drawable/rounded_corners_button">
+
+
+
+                <Button
+                    android:id="@+id/btn_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:text="Submit"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size" />
+
+                <ImageView
+                    android:layout_width="30dip"
+                    android:layout_height="30dip"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_margin="10dip"
+                    android:src="@drawable/ic_right_arrow">
+                </ImageView>
+            </FrameLayout>
+
         </LinearLayout>
     </ScrollView>
 
