--- a/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_seeds_manager.xml
@@ -341,17 +341,38 @@
 
 
 
-            <Button
-                android:id="@+id/btn_save"
-                style="@style/Button"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorPrimary"
-                android:drawableTint="#ffffff"
-                android:text="Submit "
-                android:textAllCaps="true"
-                android:textColor="#ffffff"
-                android:background="@drawable/rounded_corners_button"/>
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="@dimen/dimen_20dp"
+                android:background="@drawable/rounded_corners_button">
+
+
+
+                <Button
+                    android:id="@+id/btn_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:text="Submit"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size" />
+
+                <ImageView
+                    android:layout_width="30dip"
+                    android:layout_height="30dip"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_margin="10dip"
+                    android:src="@drawable/ic_right_arrow">
+                </ImageView>
+            </FrameLayout>
 
         </LinearLayout>
 
