--- a/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
@@ -139,6 +139,7 @@
                         android:visibility="visible" />
 
                 <TextView
+                    android:id="@+id/txt_crop_spray_units"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="ML"
