--- a/app/src/main/res/navigation/marketplace_nav_graph.xml
+++ b/app/src/main/res/navigation/marketplace_nav_graph.xml
@@ -1,5 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/marketplace_nav_graph">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/marketplace_nav_graph"
+    app:startDestination="@id/marketPlaceHomeFragment">
 
+    <fragment
+        android:id="@+id/marketPlaceHomeFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.marketplace.MarketPlaceHomeFragment"
+        android:label="Marketplace"
+        tools:layout="@layout/fragment_marketplace_home" >
+        <action
+            android:id="@+id/action_marketPlaceHomeFragment_to_buyInputsFragment"
+            app:destination="@id/buyInputsFragment" />
+        <action
+            android:id="@+id/action_marketPlaceHomeFragment_to_sellProduceFragment"
+            app:destination="@id/sellProduceFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/buyInputsFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.marketplace.BuyInputsFragment"
+        android:label="Buy Inputs"
+        tools:layout="@layout/fragment_buy_inputs" />
+    <fragment
+        android:id="@+id/sellProduceFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.marketplace.SellProduceFragment"
+        android:label="Sell Produce"
+        tools:layout="@layout/fragment_sell_produce" />
 </navigation>
