--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/farmRecordsHomeFragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.FarmRecordsHomeFragment"
-        android:label="fragment_farm_records_home"
+        android:label="@string/title_farm_records"
         tools:layout="@layout/fragment_farm_records_home" >
         <action
             android:id="@+id/action_farmRecordsHomeFragment_to_cropRecordsFragment"
@@ -27,20 +27,85 @@
         android:id="@+id/cropRecordsFragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.CropRecordsFragment"
         android:label="@string/title_crop_records"
-        tools:layout="@layout/fragment_crop_records" />
+        tools:layout="@layout/fragment_crop_records" >
+        <action
+            android:id="@+id/action_cropRecordsFragment_to_fieldsListFragment"
+            app:destination="@id/fieldsListFragment" />
+        <action
+            android:id="@+id/action_cropRecordsFragment_to_cropListFragment"
+            app:destination="@id/cropListFragment" />
+        <action
+            android:id="@+id/action_cropRecordsFragment_to_productionReportsFragment"
+            app:destination="@id/productionReportsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/livestockRecordsFragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.LivestockRecordsFragment"
-        android:label="fragment_livestock_records"
+        android:label="@string/label_livestockrecords"
         tools:layout="@layout/fragment_livestock_records" />
     <fragment
         android:id="@+id/storeFragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.StoreFragment"
-        android:label="fragment_store"
-        tools:layout="@layout/fragment_store" />
+        android:label="@string/label_store"
+        tools:layout="@layout/fragment_store" >
+        <action
+            android:id="@+id/action_storeFragment_to_addFertilizer"
+            app:destination="@id/addFertilizer" />
+        <action
+            android:id="@+id/action_storeFragment_to_addSeed"
+            app:destination="@id/addSeed" />
+        <action
+            android:id="@+id/action_storeFragment_to_addSpray"
+            app:destination="@id/addSpray" />
+    </fragment>
     <fragment
         android:id="@+id/financialRecordsFragment"
         android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.FinancialRecordsFragment"
-        android:label="fragment_financial_records"
+        android:label="@string/label_financial_records"
         tools:layout="@layout/fragment_financial_records" />
+    <fragment
+        android:id="@+id/fieldsListFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.FieldsListFragment"
+        android:label="@string/label_fields"
+        tools:layout="@layout/fragment_fields_list" >
+        <action
+            android:id="@+id/action_fieldsListFragment_to_addFieldFragment"
+            app:destination="@id/addFieldFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/cropListFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.CropListFragment"
+        android:label="@string/label_crops"
+        tools:layout="@layout/fragment_crop_list" >
+        <action
+            android:id="@+id/action_cropListFragment_to_addCropFragment"
+            app:destination="@id/addCropFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productionReportsFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.ProductionReportsFragment"
+        android:label="@string/label_production_reports"
+        tools:layout="@layout/fragment_production_reports" />
+    <fragment
+        android:id="@+id/addFieldFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.AddFieldFragment"
+        android:label="fragment_add_field"
+        tools:layout="@layout/fragment_add_field" />
+    <fragment
+        android:id="@+id/addCropFragment"
+        android:name="com.myfarmnow.myfarmcrop.fragments.farmrecords.AddCropFragment"
+        android:label="fragment_add_crop"
+        tools:layout="@layout/fragment_add_crop" />
+    <dialog
+        android:id="@+id/addFertilizer"
+        android:name="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.AddFertilizer"
+        android:label="AddFertilizer" />
+    <dialog
+        android:id="@+id/addSeed"
+        android:name="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.AddSeed"
+        android:label="AddSeed" />
+    <dialog
+        android:id="@+id/addSpray"
+        android:name="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.AddSpray"
+        android:label="AddSpray" />
 </navigation>
