Dashborad rendering fixes

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
 
     <include
         layout="@layout/content_dashboard"
-        />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-114dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
