--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/mainView"
-                android:padding="@dimen/margin_15"
+                android:padding="@dimen/margin_10"
                 android:background="@drawable/home_background">
 
                 <RelativeLayout
@@ -129,7 +129,7 @@
                                     android:text="@string/day"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="27sp"
+                                    android:textSize="25sp"
                                     android:textStyle="bold" />
 
 
@@ -143,7 +143,7 @@
                                     android:text="@string/temp_max"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="18sp"
+                                    android:textSize="14sp"
                                     android:textStyle="bold" />
 
 
@@ -157,7 +157,7 @@
                                     android:text="@string/temp_min"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="18sp"
+                                    android:textSize="14sp"
                                     android:textStyle="bold" />
 
                             </LinearLayout>
@@ -166,7 +166,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
-                                android:layout_marginTop="20dp"
+                                android:layout_marginTop="@dimen/dimen_10dp"
                                 android:layout_marginStart="@dimen/dimen_10dp"
                                 android:weightSum="12"
                                 >
@@ -277,7 +277,7 @@
                                     android:text="@string/humidity_default"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="16sp"
+                                    android:textSize="14sp"
                                     android:textStyle="bold" />
 
 
@@ -339,7 +339,7 @@
                                     android:text="@string/humidity_default2"
                                     android:textColor="@color/white"
                                     android:fontFamily="@font/josefin_sans"
-                                    android:textSize="16sp"
+                                    android:textSize="14sp"
                                     android:textStyle="bold" />
 
 
@@ -378,10 +378,11 @@
                                 android:id="@+id/layout_dashboard_farmrecords"
                                 android:layout_width="match_parent"
                                 android:layout_height="108dp"
-                                android:layout_margin="10dp"
+                                android:layout_marginLeft="@dimen/dimen_10dp"
+                                android:layout_marginRight="@dimen/dimen_10dp"
+                                android:layout_marginTop="@dimen/dimen_10dp"
                                 android:layout_weight="1"
                                 android:orientation="vertical"
-                                android:paddingBottom="5dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/background_round_white"
                                 >
@@ -414,13 +415,11 @@
                                 android:id="@+id/layout_dashboard_wallet"
                                 android:layout_width="match_parent"
                                 android:layout_height="108dp"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginEnd="10dp"
-                                android:layout_marginBottom="10dp"
+                                android:layout_marginLeft="@dimen/dimen_10dp"
+                                android:layout_marginRight="@dimen/dimen_10dp"
+                                android:layout_marginTop="@dimen/dimen_10dp"
                                 android:layout_weight="1"
                                 android:orientation="vertical"
-                                android:paddingBottom="5dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/background_round_white">
 
@@ -459,11 +458,11 @@
                                 android:id="@+id/layout_dashboard_marketplace"
                                 android:layout_width="match_parent"
                                 android:layout_height="108dp"
-                                android:layout_margin="10dp"
+                                android:layout_marginLeft="@dimen/dimen_10dp"
+                                android:layout_marginRight="@dimen/dimen_10dp"
+                                android:layout_marginTop="@dimen/dimen_10dp"
                                 android:layout_weight="1"
                                 android:orientation="vertical"
-                                android:paddingBottom="5dp"
-                                android:layout_marginTop="-10dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/background_round_white">
 
@@ -494,10 +493,11 @@
                                 android:id="@+id/layout_dashboard_agronomy"
                                 android:layout_width="match_parent"
                                 android:layout_height="108dp"
-                                android:layout_margin="10dp"
+                                android:layout_marginLeft="@dimen/dimen_10dp"
+                                android:layout_marginRight="@dimen/dimen_10dp"
+                                android:layout_marginTop="@dimen/dimen_10dp"
                                 android:layout_weight="1"
                                 android:orientation="vertical"
-                                android:paddingBottom="5dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/background_round_white">
 
@@ -537,11 +537,12 @@
                                 android:id="@+id/layout_predictiontools_dashboard"
                                 android:layout_width="match_parent"
                                 android:layout_height="108dp"
-                                android:layout_margin="10dp"
+                                android:layout_marginLeft="@dimen/dimen_10dp"
+                                android:layout_marginRight="@dimen/dimen_10dp"
+                                android:layout_marginTop="@dimen/dimen_10dp"
                                 android:layout_weight="1"
                                 android:onClick="openCalculators"
                                 android:orientation="vertical"
-                                android:paddingBottom="5dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/background_round_white">
 
@@ -573,11 +574,11 @@
                                 android:id="@+id/layout_dashboard_service"
                                 android:layout_width="match_parent"
                                 android:layout_height="108dp"
-                                android:layout_marginStart="10dp"
-                                android:layout_marginEnd="10dp"
+                                android:layout_marginLeft="@dimen/dimen_10dp"
+                                android:layout_marginRight="@dimen/dimen_10dp"
+                                android:layout_marginTop="@dimen/dimen_10dp"
                                 android:layout_weight="1"
                                 android:orientation="vertical"
-                                android:paddingBottom="5dp"
                                 android:background="@drawable/background_round_white"
                                 android:layout_gravity="center" >
 
