--- a/app/src/main/res/layout/fragment_sell_produce.xml
+++ b/app/src/main/res/layout/fragment_sell_produce.xml
@@ -19,69 +19,89 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                android:elevation="@dimen/dimen_5dp"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/opaqueWhite"
+                app:tabMaxWidth="0dp"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextAppearance="@style/textAppearance_view_pager"
+                app:tabTextColor="@color/opaqueWhite" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ScrollView
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:background="@color/gray"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+        </androidx.viewpager.widget.ViewPager>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/sell_produce"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimen_20dp"
-                    android:layout_marginTop="@dimen/dimen_20dp"
-                    android:layout_marginEnd="@dimen/dimen_20dp"
-                    android:layout_marginBottom="@dimen/dimen_20dp"
-                    app:cardCornerRadius="@dimen/dimen_5dp"
-                    app:cardElevation="@dimen/dimen_5dp">
+        <!--        <ScrollView-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_marginTop="?attr/actionBarSize"-->
+        <!--            android:background="@color/gray"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent">-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:orientation="vertical">
+        <!--            <LinearLayout-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:orientation="vertical">-->
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="@dimen/margin_15"
-                            android:layout_marginBottom="@dimen/margin_15"
-                            android:src="@drawable/ic_sell_produce" />
+        <!--                <androidx.cardview.widget.CardView-->
+        <!--                    android:id="@+id/sell_produce"-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="wrap_content"-->
+        <!--                    android:layout_marginStart="@dimen/dimen_20dp"-->
+        <!--                    android:layout_marginTop="@dimen/dimen_20dp"-->
+        <!--                    android:layout_marginEnd="@dimen/dimen_20dp"-->
+        <!--                    android:layout_marginBottom="@dimen/dimen_20dp"-->
+        <!--                    app:cardCornerRadius="@dimen/dimen_5dp"-->
+        <!--                    app:cardElevation="@dimen/dimen_5dp">-->
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_marginBottom="@dimen/margin_15"
-                            android:layout_weight="0.5"
-                            android:fontFamily="@font/josefin_sans"
-                            android:text="Sell Produce"
-                            android:textAlignment="center"
-                            android:textAllCaps="true"
-                            android:textColor="@android:color/black"
-                            android:textSize="15sp" />
-                    </LinearLayout>
+        <!--                    <LinearLayout-->
+        <!--                        android:layout_width="match_parent"-->
+        <!--                        android:layout_height="wrap_content"-->
+        <!--                        android:background="@color/white"-->
+        <!--                        android:orientation="vertical">-->
 
-                </androidx.cardview.widget.CardView>
+        <!--                        <ImageView-->
+        <!--                            android:layout_width="wrap_content"-->
+        <!--                            android:layout_height="wrap_content"-->
+        <!--                            android:layout_gravity="center"-->
+        <!--                            android:layout_marginTop="@dimen/margin_15"-->
+        <!--                            android:layout_marginBottom="@dimen/margin_15"-->
+        <!--                            android:src="@drawable/ic_sell_produce" />-->
 
-            </LinearLayout>
+        <!--                        <TextView-->
+        <!--                            android:layout_width="match_parent"-->
+        <!--                            android:layout_height="0dp"-->
+        <!--                            android:layout_marginBottom="@dimen/margin_15"-->
+        <!--                            android:layout_weight="0.5"-->
+        <!--                            android:fontFamily="@font/josefin_sans"-->
+        <!--                            android:text="Sell Produce"-->
+        <!--                            android:textAlignment="center"-->
+        <!--                            android:textAllCaps="true"-->
+        <!--                            android:textColor="@android:color/black"-->
+        <!--                            android:textSize="15sp" />-->
+        <!--                    </LinearLayout>-->
 
-        </ScrollView>
+        <!--                </androidx.cardview.widget.CardView>-->
+
+        <!--            </LinearLayout>-->
+
+        <!--        </ScrollView>-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
