--- a/app/src/main/res/layout/fragment_financial_records.xml
+++ b/app/src/main/res/layout/fragment_financial_records.xml
@@ -16,7 +16,7 @@
             android:id="@+id/mainView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#344834"
+            android:background="@color/colorPrimary"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <androidx.appcompat.widget.Toolbar
@@ -25,7 +25,7 @@
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
-                
+
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
