--- a/app/src/main/res/layout/crop_field_list_card.xml
+++ b/app/src/main/res/layout/crop_field_list_card.xml
@@ -51,7 +51,7 @@
                             android:id="@+id/txt_crop_field_card_area"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_gravity="clip_horizontal"
+                            android:layout_gravity="center_horizontal"
                             android:layout_marginStart="200dp"
                             android:text=" 15.5 ha "
                             android:textColor="#000000"
