--- a/app/src/main/res/layout/fragment_crop_list.xml
+++ b/app/src/main/res/layout/fragment_crop_list.xml
@@ -21,8 +21,8 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
-
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" >
 
             </androidx.appcompat.widget.Toolbar>
 
